# korea-real-estate

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
.github/workflows/: ci.yml  lint.yml  publish.yml  semver.yml
cli/: main.py
docs/: cli.md  errors.md  juso.md  public_data.md  reb.md
examples/: land_search.py  price_trend_analysis.py  zoning_lookup.py
korea_realestate/: __init__.py  base_client.py  client.py  config.py  exceptions.py
korea_realestate/clients/: __init__.py  address.py  appraised_value.py  building.py  events.py  land.py  market.py  master.py  price_trends.py  sales_history.py  zoning.py
korea_realestate/http/: __init__.py  base_http_client.py  juso.py  public_data.py  reb.py
korea_realestate/models/: __init__.py  sales.py  trends.py  zoning.py
korea_realestate/utils/: __init__.py  date_utils.py  region_codes.py
scripts/: extract_sigs.py  semver.py
tests/: conftest.py  test_address.py  test_appraised_value.py  test_building.py  test_client.py  test_events.py  test_land.py  test_market.py  test_master.py  test_price_trends.py  test_sales_history.py  test_zoning.py
tests/http/: test_juso_client.py  test_public_data_client.py  test_reb_client.py
