[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "korea-real-estate"
version = "0.1.0"
description = "Python client for Korean public real estate APIs"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Takho Lee", email = "takho.lee0818@gmail.com" }]
requires-python = ">=3.11"
keywords = ["korea", "real-estate", "land", "api", "공공데이터"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
    "xmltodict>=0.13.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "geojson>=3.0.0",
    "shapely>=2.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "pyflakes>=3.2.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/tlee0818/i-want-land"
Repository = "https://github.com/tlee0818/i-want-land"
"Bug Tracker" = "https://github.com/tlee0818/i-want-land/issues"

[project.scripts]
korea-realestate = "korea_realestate.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
